--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run relay && next build",
     "start": "next start",
     "lint": "next lint",
     "nexus-typegen": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only schema",
-    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
+    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
+    "relay": "relay-compiler"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.67.0",
@@ -27,14 +28,27 @@
     "nexus": "^1.3.0",
     "openid-client": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-relay": "^13.2.0",
+    "relay-runtime": "^13.2.0"
   },
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
+    "@types/react-relay": "^13.0.2",
+    "@types/relay-runtime": "^13.0.3",
+    "babel-plugin-relay": "^13.2.0",
     "eslint": "latest",
     "eslint-config-next": "latest",
-    "typescript": "latest",
-    "ts-node": "latest"
+    "graphql": "^16.3.0",
+    "relay-compiler": "^13.2.0",
+    "ts-node": "latest",
+    "typescript": "latest"
+  },
+  "relay": {
+    "src": ".",
+    "schema": "./generated/schema.graphql",
+    "language": "typescript",
+    "artifactDirectory": "./generated/relay"
   }
 }
