--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -12,6 +12,8 @@
     "relay": "relay-compiler"
   },
   "dependencies": {
+    "@apollo/server": "^4.7.1",
+    "@as-integrations/next": "^2.0.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.76.0",
     "@aws-sdk/client-s3": "^3.76.0",
     "@aws-sdk/credential-providers": "^3.76.0",
@@ -21,29 +23,27 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
-    "apollo-server-core": "^3.6.7",
-    "apollo-server-micro": "^3.6.7",
     "next": "latest",
     "next-auth": "latest",
     "nexus": "^1.3.0",
     "openid-client": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-relay": "^13.2.0",
-    "relay-runtime": "^13.2.0",
+    "react-relay": "^15.0.0",
+    "relay-runtime": "^15.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
-    "@types/react-relay": "^13.0.2",
-    "@types/relay-runtime": "^13.0.3",
+    "@types/react-relay": "^14.1.4",
+    "@types/relay-runtime": "^14.1.10",
     "@types/validator": "^13.7.2",
-    "babel-plugin-relay": "^13.2.0",
+    "babel-plugin-relay": "^15.0.0",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "graphql": "^16.3.0",
-    "relay-compiler": "^13.2.0",
+    "relay-compiler": "^15.0.0",
     "ts-node": "latest",
     "typescript": "latest"
   },
