--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+# SpecStory explanation file
+.specstory/.what-is-this.md
+.specstory/history
