--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "altmeta-org-v4",
+  "name": "blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
