--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "next-export-optimize-images": "^4.6.2",
+    "sharp": "^0.34.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
