[Infra] Restore MDX functionality

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@vercel/speed-insights": "^1.2.0",
     "gray-matter": "^4.0.3",
     "next": "^16.0.7",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.1"
   },
